--- a/classes.html
+++ b/classes.html
@@ -114,7 +114,7 @@
             <div class="col-lg-12">
 
                 <ul id="myTab" class="nav nav-tabs nav-justified">
-                    <li class="active"><a href="#seniors" data-toggle="tab"><i class="fa fa-fort-awesome"></i> Seniors Classes</a>
+                    <li class="active"><a href="#seniors" data-toggle="tab"><i class="fa fa-trophy"></i> Seniors Classes</a>
                     </li>
                     <li class=""><a href="#juniors" data-toggle="tab"><i class="fa fa-bolt"></i> Junior Classes</a>
                     </li>
