--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IchiByoShi Kendo Club</title>
+    <title>Ichi ByoShi Kendo Club</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -85,8 +85,8 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Home One
-                    <small>Subheading</small>
+                <h1 class="page-header">Blogs from our Members
+                    <small>and other drivel!</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
