--- a/gallery.html
+++ b/gallery.html
@@ -174,6 +174,30 @@
         <!-- /.row -->
 
         <hr>
+        
+        
+    //Auto generate image array
+    <script>   
+        $imglist = array();
+        $img_folder = "path to my image";
+
+        //use the directory class
+        $imgs = dir($img_folder);
+
+        //read all files from the  directory, checks if are images and adds them to a list 
+        while ($file = $imgs->read()) {
+         if (eregi("gif", $file) || eregi("jpg", $file) || eregi("png", $file)){
+              $imglist[] = $file;
+           } 
+        }
+        closedir($imgs->handle);
+
+        //display image
+        foreach($imglist as $image) {
+            echo '<img src="'.$img_folder.$image.'">';
+        }
+        </script> 
+
 
         <!-- Pagination -->
         <div class="row text-center">
