--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -249,7 +249,11 @@ The club will aim to assist the development of it's members as athletes and as i
         interval: 5000 //changes the speed
     })
     </script>
-
+      <script>
+        $(document).ready(function(){
+           alert('Cameron is awesome'); 
+        });
+    </script>
 </body>
 
 </html>
