--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -104,15 +104,15 @@
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">11th</a>
+                    <a href="#">11th Sensei Ozawa Seminar 2016</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Garance Cogitore</a>
                 </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
+                <p><i class="fa fa-clock-o"></i> Posted on June 25, 2016 at 09:00 AM</p>
                 <hr>
                 <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
+                    <img class="img-responsive img-hover" src="/img/11329767_10205853240963141_8507880999781111592_n.jpg" alt="">
                 </a>
                 <hr>
                 <h3>11th Sensei Ozawa Seminar 2016</h3>
