--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -112,7 +112,7 @@
                 <p><i class="fa fa-clock-o"></i> Posted on June 25, 2016 at 09:00 AM</p>
                 <hr>
                 <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="/img/11329767_10205853240963141_8507880999781111592_n.jpg" alt="">
+                    <img class="img-responsive img-hover" width="300" src="/img/11329767_10205853240963141_8507880999781111592_n.jpg" alt="">
                 </a>
                 <hr>
                 <h3>11th Sensei Ozawa Seminar 2016</h3>
