--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -199,7 +199,7 @@
                     This year, it paid off and I came home with a nice 1st Place certificate signed by Sensei Ozawa. Maybe next year, it could be you?</p>
                 
                 </div>
-                <a class="btn btn-primary" id="bl_btn_1">Read More <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary" href="#Ozawa" id="bl_btn_1">Read More <i class="fa fa-angle-right"></i></a>
                 <hr>
 
                 <!-- Pager -->
