--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -322,6 +322,16 @@ $(document).ready(function(){
    
     });
 });
+$(document).ready(function(){
+    $("#ladies").hide(); 
+    $("#bl_btn_1").click(function(){
+        $("#ladies").show();
+    $("#bl_btn_1").click(function(){
+        $("#ladies").hide();
+    });
+   
+    });
+});
 </script>
 
 
