--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -209,7 +209,7 @@
                     <a href="#">Ladies Seminar June 2016</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Garance Cogitore</a>
+                    by <a href="index.php">Miranda Upstone</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> Posted on July 28, 2016 at 13:00 PM</p>
                 <hr>
