--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -314,18 +314,14 @@
     <script>
 $(document).ready(function(){
     $("#Ozawa").hide(); 
+    $("#bl_btn_1").click(function(){
+        $("#Ozawa").toggle();
+    });
     $("#ladies").hide();
     $("#bl_btn_1").click(function(){
-        $("#Ozawa").show();
-    $("#bl_btn_1").click(function(){
-        $("#Ozawa").hide();
-    $("#bl_btn_1").click(function(){
-        $("#ladies").show();
-    $("#bl_btn_1").click(function(){
-        $("#ladies").hide();
+        $("#ladies").toggle();
     });
    
-    });
 });
 
 </script>
