--- a/classes.html
+++ b/classes.html
@@ -156,7 +156,7 @@
                         <ul>
                             <li>There is no special equipment required for around 4 months.</li>
                             <li>All instructors are CRB checked.</li>
-                            <li>Ichi ByōShi offers a 6 week beginners course. This costs £70, but includes insurance, weapons and instruction.</li>
+                            <li>Ichi ByōShi offers a 6 week beginners course. This costs £30 for loan weapons and instruction. Temporary membership to the BKA must be acquired.</li>
                         </ul>
                         Equipment is not provided by the club outside of the beginners package. Please see our <a href="#beginners">links</a> page for suggested places to purchase equipment.</p>
                         </div>
@@ -169,13 +169,12 @@
                         </div>
                         <div class="col-md-4">
                             <h2>The Starter Package</h2>
-                            <p>The package costs £70 and consists of the following:<br>
+                            <p>The package costs £30 and consists of the following:<br>
                         <ul>
                             <li>6 weeks of tuition on the Ichi ByōShi beginners course.</li>
-                            <li>Bokuto(wooden) and Shinai(bamboo) swords.</li>
-                            <li>Temporary membership of the British Kendo Association.</li>
-                            <li>Insurance.</li>
-                        </ul>    
+                            <li>Loan Bokuto(wooden) and Shinai(bamboo) swords.</li>
+                        </ul> 
+                        Temporary membership of the BKA is acquired directly.
                         </p>
                         </div>
                         <div class="col-md-4">
