--- a/blog-home-1.html
+++ b/blog-home-1.html
@@ -107,7 +107,7 @@
                     <a href="#">10th Kodokan Ladies Seminar</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Miranda Upstone</a>
+                    by <a href="index.php">Garance Cogitore</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> Posted on August 8, 2016 at 13:00 PM</p>
                 <hr>
