--- a/classes.html
+++ b/classes.html
@@ -128,7 +128,7 @@
                     <div class="tab-pane fade active in" id="seniors">
                         <h4>Seniors Classes</h4>
                         <div class="col-md-5">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2466.6523924394482!2d-0.8052900842187943!3d51.81251187968636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876f7ae7acb32f7%3A0xb0a8c6632a419546!2sAylesbury+High+School!5e0!3m2!1sen!2suk!4v1457892672673" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>    
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78987.05096064466!2d-0.7108934647228042!3d51.7815741926724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876f64ad68e1603%3A0x4212574df322e12!2sIchi+Byoshi+Kendo+Club!5e0!3m2!1sen!2suk!4v1489154424520" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                         <div class="col-md-3">
                             <h2>Costs?</h2>
