--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93875.60379806191!2d-0.7197744395087886!3d51.808639474965375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487657882dadcdbd%3A0xd81b10fa587ffbb3!2sAylesbury%2C+Buckinghamshire!5e0!3m2!1sen!2suk!4v1457872704891" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78987.05096064466!2d-0.7108934647228042!3d51.7815741926724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876f64ad68e1603%3A0x4212574df322e12!2sIchi+Byoshi+Kendo+Club!5e0!3m2!1sen!2suk!4v1489154424520" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
