--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                             <small>Instructor (shinai)</small>
                         </h3>
                         <p>Chris has been practicing Kendo accross the globe since 2006. Gaining his initial training while living in Korea, he brings another flavour to Ichi ByōShi.</br>
-                        Recently, Chris took bronze in the "4 Nations" competition and regularly trains with the GB squad.</p>
+                        Recently, Chris regularly trains with the GB squad, taking bronze in the "4 Nations" competition and silver at the Premier cup.</p>
 
                     </div>
                 </div>
