--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-  <title>Ichi ByōShi Kendo Club</title>
+    <title>Ichi ByōShi Kendo Club</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,6 +56,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="resources.html">Resources</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery<b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -72,12 +75,16 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="https://www.facebook.com/groups/359797464036657/?fref=ts" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
+
     
     <!-- Page Content -->
     <div class="container">
