--- a/resources.html
+++ b/resources.html
@@ -56,6 +56,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="resources.html">Resources</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery<b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -73,7 +76,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="https://www.facebook.com/groups/359797464036657/?fref=ts" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
                 </ul>
             </div>
@@ -81,6 +84,7 @@
         </div>
         <!-- /.container -->
     </nav>
+
     
     <!-- Page Content -->
     <div class="container">
