--- a/resources.html
+++ b/resources.html
@@ -310,13 +310,12 @@
             <dt>shinpan-shunin</dt> <dd>court judge </dd>
             </dl>
             </div>
-<!--            <div class="col-md-6">
-                <h2>Useful things</h2>
-                <p>
-                
-                </p>
-             
-            </div> -->
+         <div class="col-md-6">
+                <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
+              <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
+              <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
+
+            </div> 
         </div>
         <!-- /.row -->
 
