--- a/resources.html
+++ b/resources.html
@@ -311,9 +311,12 @@
             </dl>
             </div>
          <div class="col-md-6">
-                <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
               <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
-              <img class="img-responsive" src="img/IMG_2700.JPG" alt="">
+              <img class="img-responsive" src="img/DSC_0026 2.JPG" alt="">
+              <img class="img-responsive" src="img/DSC_0038.JPG" alt="">
+              <img class="img-responsive" src="img/IMG_2721.JPG" alt="">
+              <img class="img-responsive" src="img/IMG_2795.JPG" alt="">
+              <img class="img-responsive" src="img/IMG_2899.JPG" alt="">
 
             </div> 
         </div>
