--- a/gallery.html
+++ b/gallery.html
@@ -93,13 +93,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Four Column Portfolio
-                    <small>Subheading</small>
+                <h1 class="page-header">Images of Our Club
+                    <small>Gambatte!</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Four Column Portfolio</li>
+                    <li class="active">Gallery</li>
                 </ol>
             </div>
         </div>
@@ -109,47 +109,22 @@
         <div class="row">
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\1.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\4.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\13.png" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\img_2632.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -159,22 +134,47 @@
         <div class="row">
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\img_2652.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\img_2807.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\img_2943.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive img-hover" src="img\group1.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 img-portfolio">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover" src="img\old3.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 img-portfolio">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover" src="img\old8.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 img-portfolio">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover" src="img\group2.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 img-portfolio">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover" src="img\imh_2818.jpg" alt="">
                 </a>
             </div>
         </div>
