--- a/gallery.html
+++ b/gallery.html
@@ -219,7 +219,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2015</p>
+                    <p>Copyright &copy; Ichi ByōShi 2016</p>
                 </div>
             </div>
         </footer>
