--- a/classes.html
+++ b/classes.html
@@ -134,7 +134,7 @@
                     <div class="tab-pane fade active in" id="seniors">
                         <h4>Seniors Classes</h4>
                         <div class="col-md-5">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78987.05096064466!2d-0.7108934647228042!3d51.7815741926724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876f64ad68e1603%3A0x4212574df322e12!2sIchi+Byoshi+Kendo+Club!5e0!3m2!1sen!2suk!4v1489154424520" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2466.374869377258!2d-0.8041398!3d51.8175822!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4212574df322e12!2sIchi+Byoshi+Kendo+Club!5e0!3m2!1sen!2suk!4v1514715697295" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                         <div class="col-md-3">
                             <h2>Costs?</h2>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col-md-4">
                             <h2>Where and When?</h2>
-                             <p>Classes are on a Thursday night in Aylesbury. The class runs from 7:30 to 9:30. A typical class includes Kata, Kihon, Suburi and Gi Keiko.<br>
+                             <p>Classes are on a Thursday night in Aylesbury. The class runs from 8:00 to 10:00. A typical class includes Kata, Kihon, Suburi and Gi Keiko.<br>
                         Equipment is not provided by the club outside of the beginners <a href="#">package</a>. Please see our <a href="#">links</a> page for suggested places to purchase equipment.</p>
                         </div>
                     </div>
