--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <p>Ichi ByōShi Kendo Club key details:</p>
                 <ul>
                     <li><strong>Seniors classes in Aylesbury</strong></li>
-                    <li>Thursday 19:30-21:30: <a href="https://www.google.co.uk/maps/place/Aylesbury+High+School/@51.8122499,-0.8045391,17z/data=!4m2!3m1!1s0x4876f7ae7acb32f7:0xb0a8c6632a419546">Aylesbury High School</a></li>
+                    <li>Thursday 20:00-22:00: <a href="https://www.google.co.uk/maps/place/Aqua+Vale+Swimming+and+Fitness+Centre/@51.8175822,-0.8063285,17z/data=!3m1!4b1!4m5!3m4!1s0x4876f7a57c88c30b:0x2ba6378a6dd3aad9!8m2!3d51.8175822!4d-0.8041398?dcr=0">Aqua Vale Fitness Centre</a></li>
                     <li><strong>Junior classes in Hemel Hempstead</strong></li>
                     <li>Saturday 15:00-17:00: <a href="https://www.google.co.uk/maps/place/Sportspace+Hemel+Hempstead/@51.7453023,-0.4801467,17z/data=!3m1!4b1!4m2!3m1!1s0x487643dfd169146b:0x8b7c81496ef28672"> Hemel Sports Centre</a></li>
                     <li>We cater for beginners and experienced Kendoka</li>
