--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                         <h4><i class="fa fa-fw fa-university"></i> Costs?</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Classes cost £30 per calender month.</br>
-                        Beginners 6 week course costs £30 plus BKA membership</br>
+                        <p>Classes cost £35 per calender month.</br>
+                        Beginners 6 week course available. Please email for details and costings</br>
                         Membership of the <a href="http://www.britishkendoassociation.com/">BKA</a> is neccesary to train.</br>
                         
                         </p>
@@ -185,6 +185,7 @@
                 <p>Ichi ByōShi Kendo Club key details:</p>
                 <ul>
                     <li><strong>Seniors classes in Aylesbury</strong></li>
+                    <li>Tuesday 20:00-22:00: <a href="https://goo.gl/maps/X717d51PVSfrBUAc7">Stoke Mandeville Stadium</a></li>
                     <li>Thursday 20:00-22:00: <a href="https://www.google.co.uk/maps/place/Aqua+Vale+Swimming+and+Fitness+Centre/@51.8175822,-0.8063285,17z/data=!3m1!4b1!4m5!3m4!1s0x4876f7a57c88c30b:0x2ba6378a6dd3aad9!8m2!3d51.8175822!4d-0.8041398?dcr=0">Aqua Vale Fitness Centre</a></li>
                     <li><strong>Junior classes in Hemel Hempstead</strong></li>
                     <li>Saturday 15:00-17:00: <a href="https://www.google.co.uk/maps/place/Sportspace+Hemel+Hempstead/@51.7453023,-0.4801467,17z/data=!3m1!4b1!4m2!3m1!1s0x487643dfd169146b:0x8b7c81496ef28672"> Hemel Sports Centre</a></li>
