--- a/about.html
+++ b/about.html
@@ -145,8 +145,8 @@
                         <h3>Chris Bowden, 4th Dan<br>
                             <small>Instructor (shinai)</small>
                         </h3>
-                        <p>Chris has been practicing Kendo accross the globe since 2006. Gaining his initial training while living in Korea, he brings another flavour to Ichi ByōShi.</br>
-                        Recently, Chris regularly trains with the GB squad, taking bronze in the "4 Nations" competition and silver at the Premier cup.</p>
+                        <p>Chris has been practicing Kendo accross the globe since 2006. Gaining his initial training while living in Korea, he brings another flavour to Ichi ByōShi.
+Recently, Chris regularly trains with the GB squad, taking bronze in the "4 Nations" competition and silver at the Premier cup. He has represented Great Britain at the European Kendo Championships in Hungary 2017 & Serbia 2019 as well as at the World Kendo Championships in Korea 2018.</p>
 
                     </div>
                 </div>
