--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
 The club will aim to assist the development of it's members as athletes and as individuals, stressing the benefits of respect and discipline whilst ensuring that the students have fun and enjoy their training. All students will learn all aspects of Kendo and have the opportunity to compete if they wish.</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="img/13.png" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/B47fNDgt63g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                
+<!--        <img class="img-responsive" src="img/13.png" alt=""> -->
             </div>
         </div>
         <!-- /.row -->
