--- a/classes.html
+++ b/classes.html
@@ -59,7 +59,7 @@
                     <li>
                         <a href="resources.html">Resources</a>
                     </li>
-                    <li class="dropdown">
+              <!--      <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -74,7 +74,7 @@
                                 <a href="blog-home-1.html">Blog Home 1</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="https://www.facebook.com/groups/359797464036657/?fref=ts" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
