--- a/classes.html
+++ b/classes.html
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col-md-4">
                             <h2>Where and When?</h2>
-                             <p>Classes are on a Thursday night in Aylesbury. The class runs from 8:00 to 10:00. A typical class includes Kata, Kihon, Suburi and Gi Keiko.<br>
+                             <p>Classes are on Tuesday and Thursday nights in Aylesbury. The classes run from 8:00 to 10:00. A typical class includes Kata, Kihon, Suburi and Gi Keiko.<br>
                         Equipment is not provided by the club outside of the beginners <a href="#">package</a>. Please see our <a href="#">links</a> page for suggested places to purchase equipment.</p>
                         </div>
                     </div>
